[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/main/puzzle/PuzzleTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/puzzle/editor/editor-json.gd" type="Script" id=2]
[ext_resource path="res://src/main/puzzle/editor/editor-playfield.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/editor/box-chunk.gd" type="Script" id=4]
[ext_resource path="res://src/main/puzzle/editor/piece-chunk.gd" type="Script" id=5]
[ext_resource path="res://src/main/puzzle/editor/veg-chunk.gd" type="Script" id=6]
[ext_resource path="res://src/main/puzzle/editor/LevelChunkControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/puzzle/editor/level-editor.gd" type="Script" id=8]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=10]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=11]

[node name="LevelEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPanel" type="Control" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 600.0
rect_min_size = Vector2( 120, 600 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateButton" type="Button" parent="HBoxContainer/LeftPanel/GridContainer"]
margin_right = 36.0
margin_bottom = 26.0
theme = ExtResource( 11 )
text = "Ro"

[node name="ChangeButton" type="Button" parent="HBoxContainer/LeftPanel/GridContainer"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 26.0
theme = ExtResource( 11 )
text = "Ch"

[node name="Veg" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 30.0
margin_bottom = 62.0
script = ExtResource( 6 )

[node name="Veg2x2" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 30.0
margin_right = 76.0
margin_bottom = 62.0
script = ExtResource( 6 )
_veg_size = Vector2( 2, 2 )

[node name="JPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 66.0
margin_bottom = 98.0
script = ExtResource( 5 )

[node name="LPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 66.0
margin_right = 76.0
margin_bottom = 98.0
script = ExtResource( 5 )
_editor_piece = 1

[node name="OPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 102.0
margin_bottom = 134.0
script = ExtResource( 5 )
_editor_piece = 2

[node name="PPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 102.0
margin_right = 76.0
margin_bottom = 134.0
script = ExtResource( 5 )
_editor_piece = 3

[node name="QPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 138.0
margin_bottom = 170.0
script = ExtResource( 5 )
_editor_piece = 4

[node name="TPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 138.0
margin_right = 76.0
margin_bottom = 170.0
script = ExtResource( 5 )
_editor_piece = 5

[node name="UPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 174.0
margin_bottom = 206.0
script = ExtResource( 5 )
_editor_piece = 6

[node name="VPiece" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 174.0
margin_right = 76.0
margin_bottom = 206.0
script = ExtResource( 5 )
_editor_piece = 7

[node name="Box3x1" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 210.0
margin_bottom = 242.0
script = ExtResource( 4 )
_box_size = Vector2( 3, 1 )

[node name="Box3x2" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 210.0
margin_right = 76.0
margin_bottom = 242.0
script = ExtResource( 4 )
_box_size = Vector2( 3, 2 )

[node name="Box3x3" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 246.0
margin_bottom = 278.0
script = ExtResource( 4 )

[node name="Box3x4" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_left = 40.0
margin_top = 246.0
margin_right = 76.0
margin_bottom = 278.0
script = ExtResource( 4 )
_box_size = Vector2( 3, 4 )

[node name="Box3x5" parent="HBoxContainer/LeftPanel/GridContainer" instance=ExtResource( 7 )]
margin_top = 282.0
margin_bottom = 314.0
script = ExtResource( 4 )
_box_size = Vector2( 3, 5 )

[node name="CenterPanel" type="Control" parent="HBoxContainer"]
margin_left = 124.0
margin_right = 860.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playfield" type="Control" parent="HBoxContainer/CenterPanel/VBoxContainer"]
margin_right = 736.0
margin_bottom = 397.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZIndex" type="Node2D" parent="HBoxContainer/CenterPanel/VBoxContainer/Playfield"]
z_index = -1

[node name="Bg" type="ColorRect" parent="HBoxContainer/CenterPanel/VBoxContainer/Playfield/ZIndex"]
margin_right = 195.0
margin_bottom = 385.0
mouse_filter = 2
color = Color( 0.113725, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="HBoxContainer/CenterPanel/VBoxContainer/Playfield/ZIndex" instance=ExtResource( 1 )]
scale = Vector2( 0.3, 0.3 )
tile_data = PoolIntArray( 262144, 1, 0, 262152, 1, 0, 1245184, 1, 0, 1245192, 1, 0 )

[node name="TileMapDropPreview" parent="HBoxContainer/CenterPanel/VBoxContainer/Playfield/ZIndex" instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 0.3, 0.3 )
tile_data = PoolIntArray( 262144, 1, 0, 262152, 1, 0, 327681, 2, 0, 327683, 2, 0, 393218, 2, 0, 393220, 2, 0, 1245184, 1, 0, 1245192, 1, 0 )

[node name="Json" type="TextEdit" parent="HBoxContainer/CenterPanel/VBoxContainer"]
margin_top = 401.0
margin_right = 736.0
margin_bottom = 600.0
size_flags_vertical = 3
text = "abc"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPanel" type="Control" parent="HBoxContainer"]
margin_left = 864.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 160, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideButtons" type="VBoxContainer" parent="HBoxContainer/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 150, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScenarioName" type="LineEdit" parent="HBoxContainer/RightPanel/SideButtons"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 20 )
theme = ExtResource( 11 )
text = "default"

[node name="HSeparator1" type="HSeparator" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 38.0

[node name="OpenFile" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 42.0
margin_right = 150.0
margin_bottom = 68.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Open File"

[node name="OpenResource" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 98.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Open Resource"

[node name="Save" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 102.0
margin_right = 150.0
margin_bottom = 128.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Save"
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 132.0
margin_right = 150.0
margin_bottom = 136.0

[node name="Test" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 140.0
margin_right = 150.0
margin_bottom = 166.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Test"
__meta__ = {
"_editor_description_": ""
}

[node name="Filler" type="Control" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 170.0
margin_right = 150.0
margin_bottom = 530.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 534.0
margin_right = 150.0
margin_bottom = 560.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
shortcut = ExtResource( 10 )
text = "Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Quit" type="Button" parent="HBoxContainer/RightPanel/SideButtons"]
margin_top = 564.0
margin_right = 150.0
margin_bottom = 590.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "d:/workspace/turbofat"
current_file = "boatricia.json"
current_path = "d:/workspace/turbofat/boatricia.json"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenResourceDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
window_title = "Open a File"
mode = 0
current_dir = "res://assets/main/puzzle/scenario"
current_path = "res://assets/main/puzzle/scenario/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
access = 2
current_dir = "d:/workspace/turbofat"
current_file = "boatricia.json"
current_path = "d:/workspace/turbofat/boatricia.json"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 9 )]
[connection signal="tile_map_changed" from="HBoxContainer/CenterPanel/VBoxContainer/Playfield" to="HBoxContainer/CenterPanel/VBoxContainer/Json" method="_on_Playfield_tile_map_changed"]
[connection signal="text_changed" from="HBoxContainer/CenterPanel/VBoxContainer/Json" to="HBoxContainer/CenterPanel/VBoxContainer/Json" method="_on_text_changed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/OpenFile" to="." method="_on_OpenFile_pressed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/OpenResource" to="." method="_on_OpenResource_pressed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/RightPanel/SideButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="OpenResourceDialog" to="." method="_on_OpenResourceDialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_Quit_pressed"]
